Fix left border overlap

--- a/flipCard/commListCardsFlipStyle.css
+++ b/flipCard/commListCardsFlipStyle.css
@@ -1,5 +1,6 @@
 .commTiles {
   width: 100%;
+  margin: 0px 2px;
 }
 
 .cTile {
